# MLDS6project

./: README.md  XGBclassifier.joblib  pyproject.toml
docs/acceptance/: exit_report.md
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: deploymentdoc.md
docs/modeling/: model_final.md  model_report.md
scripts/data_acquisition/: dowload_data.ipynb
scripts/deployment/: despliegue.ipynb
scripts/eda/: eda.ipynb
scripts/preprocessing/: PCA.ipynb  limpieza_datos.ipynb
scripts/training/: DefinitiveModel.ipynb  mainModel.ipynb  several_models.ipynb
