[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nombre_paquete"
version = "0.1.0"
authors = [{name = "Cristhian Sandoval", email = "csandovald@unal.edu.co"}]
description = "Estimación de transacciones fraudulentas"
requires-python = ">3.8"
dependencies = [
    "numpy"
]

[tool.setuptools.packages.find]
where = ["src/"]
